# MapLibreQtProject

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml
.github/workflows/: linux.yml
cmake/: CPackSourceConfig.cmake  CreateAppImage.cmake
pack/linux/: MapLibreQtProject.desktop.in
pack/linux/appimage/: AppRun.in
src/: CMakeLists.txt  Coordinate.cpp  Coordinate.hpp  Vehicle.cpp  Vehicle.hpp  VehicleModel.cpp  VehicleModel.hpp  main.cpp  main.qml
test/: CMakeLists.txt  test.cpp
